# V-Legal

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  DEPLOYMENT_OCI_VERCEL.md  DESIGN.md  Dockerfile  README.md  appwrite.config.json  netlify.toml  pyproject.toml  render.yaml  skills-lock.json
.agent/memory_bank/: active_context.md  project_context.md  system_context.md
.agents/memory-bank/: README.md  architecture.md  decisions.md  progress.md  project-brief.md  roadmap.md
.playwright-cli/: page-2026-03-31T07-50-05-441Z.yml
deploy/oci/: .env.example  Caddyfile.example  Caddyfile.vlegal-proxy  MAINTAIN.md  docker-compose.yml
docs/: DEPLOYMENT.md  DEPLOYMENT_NETLIFY_APPWRITE.md  DEPLOYMENT_OCI_VERCEL.md  FOCUSED_CORPUS_SCOPE.md  JOURNAL.md  LEGAL_READER_IMPLEMENTATION_PLAN.md
scripts/: bootstrap_appwrite.py  bootstrap_appwrite_full.py  bootstrap_appwrite_ingest.py  bootstrap_appwrite_to_sqlite.py  bootstrap_citation_index.py  bootstrap_hf_dataset.py  bootstrap_hf_focused_corpus.py  bootstrap_hf_full_corpus.py  bootstrap_hf_recent_filtered.py  bootstrap_phapdien_taxonomy.py  bootstrap_relationship_graph.py  deploy_oci.py  migrate_sqlite_to_appwrite.py  oci_maintain.sh  prepare_demo_bundle.py  repair_document_dates.py  update_hf_monthly.py
src/v_legal_prototype.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/vlegal_prototype/: answering.py  app.py  appwrite_client.py  citations.py  compare.py  (+11 more)
static/: _redirects  app.js  styles.css
templates/: base.html  compare.html  document.html  index.html  research_view.html  tracking.html
(+3 files in other folders)
