[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[project]
name = "v-legal-prototype"
version = "0.1.0"
description = "Prototype Vietnamese legal research app bootstrapped from the Hugging Face legal corpus."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "appwrite>=16.0.0",
  "datasets>=4.3.0",
  "fastapi>=0.116.0",
  "jinja2>=3.1.6",
  "markdown>=3.8",
  "python-dotenv>=1.0.0",
  "python-multipart>=0.0.20",
  "pydantic-settings>=2.10.1",
  "uvicorn[standard]>=0.35.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true
